--- a/palletsplus/src/app/product/[id]/CustomizeProduct.module.css
+++ b/palletsplus/src/app/product/[id]/CustomizeProduct.module.css
@@ -21,7 +21,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     padding: 1rem 2rem;
     border-radius: 10px;
 }
@@ -52,7 +52,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     gap: 40px;
     background-color: white;
 
