--- a/palletsplus/src/app/product/[id]/ProductDetail.module.css
+++ b/palletsplus/src/app/product/[id]/ProductDetail.module.css
@@ -39,7 +39,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 101.7%;
     max-width: 1200px;
     padding: 1rem 2rem;
     border-radius: 10px;
@@ -72,10 +72,10 @@
     color: #0073fb;
     margin-bottom: -1%;
     margin-top:-3.8%;
-    width: 100%;
+    width: 108.3%;
     background-color: #fff;
     padding: 20px 0;
-    border-radius: 10px 10px 0 0;
+    /* border-radius: 0px 0px 0 0; */
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 
@@ -83,7 +83,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    width: 100%;
+    width: 100.1%;
     max-width: 1200px;
     gap: 40px;
     background-color: #fff;
@@ -241,4 +241,24 @@
 .buttonCancel:hover {
     background-color: #e63946;
     color: #fff;
+}
+
+.descriptionHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.shareButton {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.shareButton:hover {
+    background-color: #0056b3;
 }
