--- a/palletsplus/src/app/products/page.module.css
+++ b/palletsplus/src/app/products/page.module.css
@@ -109,3 +109,61 @@
   font-size: 14px;
   color: #555;
 }
+.searchForm {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.searchInput {
+  width: 50%;
+  padding: 15px;
+  font-size: 18px;
+  border: 2px solid #0000ff; /* Blue outline */
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.searchInput:focus {
+  border-color: #0000ff; /* Blue outline on focus */
+}
+
+.searchButton {
+  padding: 15px 20px;
+  font-size: 18px;
+  color: white;
+  background-color: #0000ff; /* Blue background */
+  border: none;
+  border-radius: 4px;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.searchButton:hover {
+  background-color: #0000cc; /* Darker blue on hover */
+}
+.noProducts {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  color: #989fa7; /* Blue color for the message */
+}
+
+.wishlistIcon {
+  color: white;
+  outline: gold;
+  cursor: pointer;
+  font-size: 38px;
+  margin-left: 10px;
+}
+
+.wishlistIcon:hover {
+  color: gold;
+}
+
+
+.wishlistIcon.gold {
+  color: gold;
+}
