--- a/palletsplus/src/app/profile/[userId]/page.module.css
+++ b/palletsplus/src/app/profile/[userId]/page.module.css
@@ -1,289 +1,273 @@
-.root {
-  --dl-size-large: 144px;
-  --dl-size-small: 48px;
-  --dl-size-medium: 96px;
-  --dl-size-xlarge: 192px;
-  --dl-size-xsmall: 16px;
-  --dl-space-unit: 16px;
-  --dl-size-xxlarge: 288px;
-  --dl-size-maxwidth: 1400px;
-  --dl-color-accent1: #F3E8E2;
-  --dl-color-accent2: #D8BFAF;
-  --dl-radius-round: 50%;
-  --dl-color-primary1: #D1510A;
-  --dl-color-primary2: #923A06;
-  --dl-space-halfunit: 8px;
-  --dl-space-sixunits: 96px;
-  --dl-space-twounits: 32px;
-  --dl-radius-2: 2px;
-  --dl-radius-4: 4px;
-  --dl-radius-8: 8px;
-  --dl-space-fiveunits: 80px;
-  --dl-space-fourunits: 64px;
-  --dl-color-secondary1: #F3E8E2;
-  --dl-color-secondary2: #E0D1CB;
-  --dl-space-threeunits: 48px;
-  --dl-color-neutral-dark: #191818;
-  --dl-radius-card: 8px;
-  --dl-color-neutral-light: #FBFAF9;
-  --dl-radius-image: 8px;
-  --dl-radius-input: 24px;
-  --dl-radius-button: 24px;
-  --dl-space-oneandhalfunits: 24px;
+.containerBase {
+  background-image: url("/tq_az7ku4h-wq-asb8-1500w.png");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 20px;
 }
 
-.button {
-  color: var(--dl-color-neutral-dark);
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  border: 1px solid var(--dl-color-neutral-dark);
-  border-radius: 4px;
-  background-color: var(--dl-color-neutral-light);
+.container {
+  margin: 0 auto;
+  padding: 40px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-.input, .textarea, .thq-input {
-  color: var(--dl-color-neutral-dark);
-  cursor: auto;
-  padding: 0.5rem 1rem;
-  border: 1px solid var(--dl-color-neutral-dark);
-  border-radius: 4px;
-  background-color: var(--dl-color-neutral-light);
+.navBar {
+  background: linear-gradient(180deg, rgba(0, 115, 251, 1) 19%, rgba(255, 255, 255, 1) 74%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 101.7%;
+  /* max-width: 1200px; */
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  margin-bottom: -15px;
+  
 }
-
-.textarea {
-  padding: 0.5rem;
-}
-
-.list {
-  width: 100%;
-  margin: 1em 0;
-  display: block;
-  padding: 0 0 0 1.5rem;
-  list-style: none;
-}
-
-.list-item {
-  display: list-item;
-}
-
-.teleport-show {
-  display: flex !important;
-  transform: none !important;
-}
-
-.thq-input {
-  align-self: stretch;
-  text-align: center;
-  border-radius: var(--dl-radius-input);
-}
-
-.thq-button-filled, .thq-button-outline, .thq-button-flat {
-  cursor: pointer;
-  transition: 0.3s;
+.navBrand {
   font-weight: bold;
-  white-space: nowrap;
-  padding: var(--dl-space-halfunit) var(--dl-space-oneandhalfunits);
-  border-radius: var(--dl-radius-button);
+  font-size: 32px;
+  color: #0073fb;
 }
 
-.thq-button-filled {
-  color: var(--dl-color-secondary1);
-  background-color: var(--dl-color-primary1);
-  border: 1px solid var(--dl-color-primary1);
-}
-
-.thq-button-filled:hover {
-  color: var(--dl-color-secondary2);
-  background-color: var(--dl-color-primary2);
-  border-color: var(--dl-color-primary2);
-}
-
-.thq-button-outline {
-  fill: var(--dl-color-primary1);
-  color: var(--dl-color-primary1);
-  border: 1px solid var(--dl-color-primary1);
-}
-
-.thq-button-outline:hover {
-  fill: var(--dl-color-secondary2);
-  color: var(--dl-color-secondary2);
-  background-color: var(--dl-color-primary2);
-}
-
-.thq-button-flat {
+.navLinks {
   display: flex;
-  gap: var(--dl-space-halfunit);
-  align-items: center;
-  fill: var(--dl-color-primary1);
-  color: var(--dl-color-primary1);
+  gap: 1.5rem;
 }
 
-.thq-button-flat:hover {
-  fill: var(--dl-color-secondary1);
-  color: var(--dl-color-secondary1);
-  background-color: var(--dl-color-primary2);
-  border-color: var(--dl-color-primary2);
+.navText {
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 24px;
+  font-family: Poppins, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
 }
 
-.thq-heading-1, .thq-heading-2, .thq-heading-3 {
-  font-family: STIX Two Text;
-  line-height: 1.5;
-}
 
-.thq-heading-1 {
-  font-size: 48px;
-  font-weight: 700;
+.profileContainer {
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 10px;
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+  width: 100.4%;
+  /* max-width: 1200px; */
+height:100%
 }
-
-.thq-heading-2 {
-  font-size: 35px;
-  font-weight: 600;
-}
-
-.thq-heading-3 {
-  font-size: 26px;
-  font-weight: 600;
-}
-
-.thq-body-large, .thq-body-small {
-  line-height: 1.5;
-}
-
-.thq-body-large {
-  font-size: 18px;
-}
-
-.thq-body-small {
-  font-size: 16px;
-}
-
-.thq-team-image-round {
-  width: 80px;
-  height: 80px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.thq-section-padding {
-  width: 100%;
-  display: flex;
-  padding: var(--dl-space-fiveunits);
-  position: relative;
-  align-items: center;
-  flex-direction: column;
-}
-
-.thq-section-max-width {
-  width: 100%;
-  max-width: var(--dl-size-maxwidth);
-}
-
-.thq-img-ratio-1-1, .thq-img-ratio-16-9, .thq-img-ratio-4-3, .thq-img-ratio-4-6, .thq-img-round {
-  width: 100%;
-  object-fit: cover;
-  border-radius: var(--dl-radius-image);
-}
-
-.thq-img-ratio-1-1 {
-  aspect-ratio: 1 / 1;
-}
-
-.thq-img-ratio-16-9 {
-  aspect-ratio: 16 / 9;
-}
-
-.thq-img-ratio-4-3 {
-  aspect-ratio: 4 / 3;
-}
-
-.thq-img-ratio-4-6 {
-  aspect-ratio: 4 / 6;
-}
-
-.thq-img-round {
-  border-radius: var(--dl-radius-round);
-}
-
-.thq-flex-column, .thq-flex-row {
-  gap: var(--dl-space-twounits);
-  display: flex;
-  overflow: hidden;
-  position: relative;
-  align-items: center;
-}
-
-.thq-flex-column {
-  flex-direction: column;
-}
-
-.thq-grid-6, .thq-grid-5, .thq-grid-4, .thq-grid-3, .thq-grid-2 {
-  display: grid;
-  grid-gap: var(--dl-space-twounits);
-  place-items: center;
-}
-
-.thq-grid-6 {
-  grid-template-columns: repeat(6, 1fr);
-}
-
-.thq-grid-5 {
-  grid-template-columns: repeat(5, 1fr);
-}
-
-.thq-grid-4 {
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.thq-grid-3 {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.thq-grid-2 {
-  grid-template-columns: repeat(2, 1fr);
-  width: 100%;
-}
-
-.thq-card {
-  gap: var(--dl-space-oneandhalfunits);
-  display: flex;
-  padding: var(--dl-space-twounits);
-  align-items: stretch;
-  border-radius: var(--dl-radius-card);
-  flex-direction: column;
-}
-
-.thq-box-shadow {
-  box-shadow: 5px 5px 10px 0px #d4d4d4;
-}
-
-.thq-checkbox {
-  width: var(--dl-size-xsmall);
-  height: var(--dl-size-xsmall);
-}
-
-.thq-select {
+.saveButton{
+  color: #007bff;
+  border: 2px solid #007bff;
+  background-color: white;
+  padding: 15px 30px;
+  font-size: 20px;
+  border-radius: 5px;
   cursor: pointer;
-  appearance: none;
-  padding: var(--dl-space-halfunit) var(--dl-space-twounits) var(--dl-space-halfunit) var(--dl-space-unit);
-  border-radius: var(--dl-radius-input);
-  background-color: var(--dl-color-neutral-light);
-  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg width%3D%2220%22 height%3D%2220%22 xmlns%3D%22http%3A//www.w3.org/2000/svg%22 viewBox%3D%220 0 20 20%22 fill%3D%22%23000%22%3E%3Cpath d%3D%22M4.293 7.293a1 1 0 011.414 0L10 11.586l4.293-4.293a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414z%22/%3E%3C/svg%3E');
-  background-repeat: no-repeat;
-  background-position: right 8px center;
+  transition: background-color 0.3s ease;
+  width: 150px; /* Standard width */
+  text-align: center;
+  margin-top: 5%;
 }
 
-.thq-divider-horizontal {
+.saveButton:hover {
+  background-color: #007bff;
+  color: white;
+}
+
+.profileProfile {
   width: 100%;
-  height: 1px;
-  background-color: var(--dl-color-neutral-dark);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
 
-.thq-icon-small {
-  width: 24px;
-  height: 24px;
+.profileRectangle19 {
+  width: 100%;
+  height: auto;
+  border-radius: 50px 50px 0 0;
+  object-fit: cover;
 }
 
-.thq-link {
+.profileText {
+  margin-top: 20px;
+  color: rgba(118, 118, 118, 1);
+  font-size: 42px;
+  text-align: center;
+  font-family: Poppins, sans-serif;
+  font-weight: 400;
+}
+.profileInfo {
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: black;
+}
+
+.profileField {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.profileLabel {
+  margin-right: 70px;
+  color:black;
+  font-size: 22px;
+  font-family: Poppins, sans-serif;
+  /* font-weight: 400; */
+  font-weight: bold;
+}
+
+.profileValue {
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 22px;
+  font-family: Poppins, sans-serif;
+  font-weight: 400;
+
+}
+
+.profileText14 {
+  margin-top: 20px;
+  color: rgba(255, 0, 0, 0.47);
+  font-size: 32px;
+  text-align: left;
+  font-family: Poppins, sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+  border: 2px solid #e63946;
+  padding: 15px 30px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  display: inline-block;
+}
+
+.profileText14:hover {
+  background-color: #e63946;
+  color: #fff;
+}
+
+.buttonChange {
+  color: #007bff;
+  border: 2px solid #007bff;
+  background-color: white;
+  padding: 15px 30px;
+  font-size: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 150px; /* Standard width */
+  text-align: center;
+}
+
+.buttonChange:hover {
+  background-color: #007bff;
+  color: white;
+}
+
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modalContent {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.modalContent input {
+  width: 100%;
+  padding: 15px;
+  margin-top: 10px;
+  font-size: 18px;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  box-sizing: border-box; /* Ensure padding is included in the width */
+}
+
+.button,
+.buttonLogout {
+    padding: 15px 30px;
+    font-size: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: 2px solid #0073fb;
+    background-color: #fff;
+    color: #0073fb;
+    transition: background-color 0.3s ease;
+    flex: 1 1 auto;
+    margin-top:1%;
+}
+.buttonLogout {
+  border-color: #e63946;
+  color: #e63946;
+}
+
+.button:hover {
+  background-color: #0073fb;
+  color: #fff;
+}
+
+.buttonLogout:hover {
+  background-color: #e63946;
+  color: #fff;
+}
+
+.profileButtons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+
+.buttonAction {
+  color: #007bff;
+  border: 2px solid #007bff;
+  background-color: white;
+  padding: 15px 30px;
+  font-size: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 14%;
+  text-align: center;
+}
+
+.buttonAction:hover {
+  background-color: #007bff;
+  color: white;
 }
