--- a/palletsplus/src/components/Navbar.module.css
+++ b/palletsplus/src/components/Navbar.module.css
@@ -1,4 +1,4 @@
-/* src/components/NavBar.module.css */
+/* src/components/NavBar.module.css
 .nav-bar {
     top: 36px;
     left: 42px;
@@ -88,4 +88,4 @@
     font-family: Poppins, sans-serif;
     line-height: 17px;
     text-decoration: none;
-}
+} */
