--- a/palletsplus/src/app/home/page.module.css
+++ b/palletsplus/src/app/home/page.module.css
@@ -1,208 +1,418 @@
-.home-page-container {
+:root {
+  --dl-size-size-large: 144px;
+  --dl-size-size-small: 48px;
+  --dl-size-size-medium: 96px;
+  --dl-size-size-xlarge: 192px;
+  --dl-size-size-xsmall: 16px;
+  --dl-space-space-unit: 16px;
+  --dl-size-size-xxlarge: 288px;
+  --dl-size-size-maxwidth: 1400px;
+  --dl-color-theme-accent1: #F3E8E2;
+  --dl-color-theme-accent2: #D8BFAF;
+  --dl-radius-radius-round: 50%;
+  --dl-color-theme-primary1: #D1510A;
+  --dl-color-theme-primary2: #923A06;
+  --dl-space-space-halfunit: 8px;
+  --dl-space-space-sixunits: 96px;
+  --dl-space-space-twounits: 32px;
+  --dl-radius-radius-radius2: 2px;
+  --dl-radius-radius-radius4: 4px;
+  --dl-radius-radius-radius8: 8px;
+  --dl-space-space-fiveunits: 80px;
+  --dl-space-space-fourunits: 64px;
+  --dl-color-theme-secondary1: #F3E8E2;
+  --dl-color-theme-secondary2: #E0D1CB;
+  --dl-space-space-threeunits: 48px;
+  --dl-color-theme-neutral-dark: #191818;
+  --dl-radius-radius-cardradius: 8px;
+  --dl-color-theme-neutral-light: #FBFAF9;
+  --dl-radius-radius-imageradius: 8px;
+  --dl-radius-radius-inputradius: 24px;
+  --dl-radius-radius-buttonradius: 24px;
+  --dl-space-space-oneandhalfunits: 24px;
+}
+.button {
+  color: var(--dl-color-theme-neutral-dark);
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  border-color: var(--dl-color-theme-neutral-dark);
+  border-width: 1px;
+  border-radius: 4px;
+  background-color: var(--dl-color-theme-neutral-light);
+}
+.input {
+  color: var(--dl-color-theme-neutral-dark);
+  cursor: auto;
+  padding: 0.5rem 1rem;
+  border-color: var(--dl-color-theme-neutral-dark);
+  border-width: 1px;
+  border-radius: 4px;
+  background-color: var(--dl-color-theme-neutral-light);
+}
+.textarea {
+  color: var(--dl-color-theme-neutral-dark);
+  cursor: auto;
+  padding: 0.5rem;
+  border-color: var(--dl-color-theme-neutral-dark);
+  border-width: 1px;
+  border-radius: 4px;
+  background-color: var(--dl-color-theme-neutral-light);
+}
+.list {
+  width: 100%;
+  margin: 1em 0px 1em 0px;
+  display: block;
+  padding: 0px 0px 0px 1.5rem;
+  list-style-type: none;
+  list-style-position: outside;
+}
+.list-item {
+  display: list-item;
+}
+.teleport-show {
+  display: flex !important;
+  transform: none !important;
+}
+.thq-input {
+  color: var(--dl-color-theme-neutral-dark);
+  cursor: auto;
+  padding: 0.5rem 1rem;
+  align-self: stretch;
+  text-align: center;
+  border-color: var(--dl-color-theme-neutral-dark);
+  border-width: 1px;
+  border-radius: var(--dl-radius-radius-inputradius);
+  background-color: var(--dl-color-theme-neutral-light);
+}
+.thq-button-filled {
+  color: var(--dl-color-theme-secondary1);
+  cursor: pointer;
+  transition: 0.3s;
+  font-family: Noto Sans;
+  font-weight: bold;
+  padding-top: var(--dl-space-space-halfunit);
+  white-space: nowrap;
+  border-color: var(--dl-color-theme-primary1);
+  padding-left: var(--dl-space-space-oneandhalfunits);
+  border-radius: var(--dl-radius-radius-buttonradius);
+  padding-right: var(--dl-space-space-oneandhalfunits);
+  padding-bottom: var(--dl-space-space-halfunit);
+  background-color: var(--dl-color-theme-primary1);
+}
+.thq-button-filled:hover {
+  color: var(--dl-color-theme-secondary2);
+  border-color: var(--dl-color-theme-primary2);
+  background-color: var(--dl-color-theme-primary2);
+}
+.thq-button-outline {
+  fill: var(--dl-color-theme-primary1);
+  color: var(--dl-color-theme-primary1);
+  border: 1px solid;
+  cursor: pointer;
+  transition: 0.3s;
+  font-weight: bold;
+  padding-top: var(--dl-space-space-halfunit);
+  white-space: nowrap;
+  border-color: var(--dl-color-theme-primary1);
+  padding-left: var(--dl-space-space-oneandhalfunits);
+  border-radius: var(--dl-radius-radius-buttonradius);
+  padding-right: var(--dl-space-space-oneandhalfunits);
+  padding-bottom: var(--dl-space-space-halfunit);
+}
+.thq-button-outline:hover {
+  fill: var(--dl-color-theme-secondary2);
+  color: var(--dl-color-theme-secondary2);
+  background-color: var(--dl-color-theme-primary2);
+}
+.thq-button-flat {
+  gap: var(--dl-space-space-halfunit);
+  fill: var(--dl-color-theme-primary1);
+  color: var(--dl-color-theme-primary1);
+  cursor: pointer;
+  display: flex;
+  transition: 0.3s;
+  align-items: center;
+  font-family: Noto Sans;
+  font-weight: bold;
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-oneandhalfunits);
+  border-radius: var(--dl-radius-radius-buttonradius);
+  padding-right: var(--dl-space-space-oneandhalfunits);
+  padding-bottom: var(--dl-space-space-halfunit);
+}
+.thq-button-flat:hover {
+  fill: var(--dl-color-theme-secondary1);
+  color: var(--dl-color-theme-secondary1);
+  border-color: var(--dl-color-theme-primary2);
+  background-color: var(--dl-color-theme-primary2);
+}
+.thq-heading-1 {
+  font-size: 48px;
+  font-family: STIX Two Text;
+  font-weight: 700;
+  line-height: 1.5;
+}
+.thq-heading-2 {
+  font-size: 35px;
+  font-family: STIX Two Text;
+  font-weight: 600;
+  line-height: 1.5;
+}
+.thq-heading-3 {
+  font-size: 26px;
+  font-family: STIX Two Text;
+  font-weight: 600;
+  line-height: 1.5;
+}
+.thq-body-large {
+  font-size: 18px;
+  line-height: 1.5;
+}
+.thq-body-small {
+  font-size: 16px;
+  line-height: 1.5;
+}
+.thq-team-image-round {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.thq-section-padding {
   width: 100%;
   display: flex;
-  overflow: auto;
-  min-height: 100vh;
+  padding: var(--dl-space-space-fiveunits);
+  position: relative;
   align-items: center;
   flex-direction: column;
 }
-
-.home-page-home-page {
+.thq-section-max-width {
   width: 100%;
-  height: 832px;
+  max-width: var(--dl-size-size-maxwidth);
+}
+.thq-img-ratio-1-1 {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 1/1;
+  border-radius: var(--dl-radius-radius-imageradius);
+}
+.thq-img-ratio-16-9 {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 16/9;
+  border-radius: var(--dl-radius-radius-imageradius);
+}
+.thq-img-ratio-4-3 {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 4/3;
+  border-radius: var(--dl-radius-radius-imageradius);
+}
+.thq-img-ratio-4-6 {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 4/6;
+  border-radius: var(--dl-radius-radius-imageradius);
+}
+.thq-img-round {
+  width: 100%;
+  border-radius: var(--dl-radius-radius-round);
+}
+.thq-flex-column {
+  gap: var(--dl-space-space-twounits);
   display: flex;
   overflow: hidden;
   position: relative;
-  align-items: flex-start;
-  flex-shrink: 0;
-  background-size: cover;
-  background-image: url('/tq_j6tank-4lw-ygsm-1500w.png');
+  align-items: center;
+  flex-direction: column;
 }
-
-.home-page-rectangle19 {
-  top: 36px;
-  left: 55px;
-  width: 1170px;
-  height: 797px;
-  position: absolute;
-  border-radius: 50px 50px 0 0;
-}
-
-.nav-bar {
-  top: 36px;
-  left: 42px;
-  width: 1183px;
-  height: 81.0992431640625px;
+.thq-flex-row {
+  gap: var(--dl-space-space-twounits);
   display: flex;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 1;
+  overflow: hidden;
+  position: relative;
+  align-items: center;
 }
-
-.rectangle1 {
-  top: 0px;
-  left: 13px;
-  width: 1170px;
-  height: 81px;
-  position: absolute;
-  border-radius: 50px 50px 10px 10px;
+.thq-grid-6 {
+  display: grid;
+  grid-gap: var(--dl-space-space-twounits);
+  place-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-
-.line6 {
-  top: 30px;
-  left: 994.9775390625px;
-  width: 18px;
-  height: 1px;
-  position: absolute;
+.thq-grid-5 {
+  display: grid;
+  grid-gap: var(--dl-space-space-twounits);
+  place-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
-
-.text, .text02, .text04 {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  font-size: 18px;
-  font-family: Poppins, sans-serif;
-  font-weight: 400;
-  line-height: normal;
-  text-decoration: none;
-  color: rgba(0, 0, 0, 0.46000000834465027);
-  text-align: left;
-  position: absolute;
-}
-
-.text {
-  top: 25px;
-  left: 700px;
-  width: 55px;
-}
-
-.text02 {
-  top: 25px;
-  left: 800px;
-  width: 80px;
-}
-
-.line7 {
-  top: 30px;
-  left: 917.5205078125px;
-  width: 18px;
-  height: 1px;
-  position: absolute;
-}
-
-.text04 {
-  top: 25px;
-  left: 900px;
-  width: 92px;
-}
-
-.mdicart {
-  top: 28px;
-  left: 990px;
-  width: 21px;
-  height: 20px;
-  position: absolute;
-}
-.container {
-  padding: 20px;
-  text-align: center;
-}
-.header {
-  margin-bottom: 20px;
-}
-.navBar {
+.thq-card {
+  gap: var(--dl-space-space-oneandhalfunits);
   display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 20px;
+  padding: var(--dl-space-space-twounits);
+  align-items: stretch;
+  border-radius: var(--dl-radius-radius-cardradius);
+  flex-direction: column;
 }
-
-.navLinks a {
-  color: #007bff;
-  text-decoration: none;
-  font-size: 18px;
-  padding: 10px;
-  border: 1px solid #007bff;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+.thq-box-shadow {
+  box-shadow: 5px 5px 10px 0px #d4d4d4;
 }
-.navLinks a:hover {
-  background-color: #007bff;
-  color: white;
+.thq-grid-3 {
+  display: grid;
+  grid-gap: var(--dl-space-space-twounits);
+  place-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
 }
-.text05 {
-  top: 25px;
-  left: 1050px;
-  width: 80px;
-  background: none;
-  border: none;
-  padding: 0;
+.thq-grid-4 {
+  display: grid;
+  grid-gap: var(--dl-space-space-twounits);
+  place-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.thq-grid-2 {
+  width: 100%;
+  display: grid;
+  grid-gap: var(--dl-space-space-twounits);
+  place-items: center;
+  grid-template-columns: 1fr 1fr;
+}
+.thq-checkbox {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+}
+.thq-select {
   cursor: pointer;
-  font-size: 18px;
-  font-family: Poppins, sans-serif;
-  font-weight: 400;
-  line-height: normal;
-  text-decoration: none;
-  color: rgba(0, 0, 0, 0.46000000834465027);
-  text-align: left;
-  position: absolute;
+  appearance: none;
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-inputradius);
+  padding-right: var(--dl-space-space-twounits);
+  padding-bottom: var(--dl-space-space-halfunit);
+  background-color: var(--dl-color-theme-neutral-light);
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg width%3D%2220%22 height%3D%2220%22 xmlns%3D%22http%3A//www.w3.org/2000/svg%22 viewBox%3D%220 0 20 20%22 fill%3D%22%23000%22%3E%3Cpath d%3D%22M4.293 7.293a1 1 0 011.414 0L10 11.586l4.293-4.293a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414z%22/%3E%3C/svg%3E');
+  background-repeat: no-repeat;
+  background-position: right 8px center;
 }
-
-.text06 {
-  top: 22px;
-  color: rgba(16, 44, 191, 1);
-  width: 286px;
-  height: auto;
-  position: absolute;
-  font-size: 38px;
+.thq-divider-horizontal {
+  width: 100%;
+  height: 1px;
+  background-color: var(--dl-color-theme-neutral-dark);
+}
+.thq-icon-small {
+  width: 24px;
+  height: 24px;
+}
+.thq-button-icon {
+  fill: var(--dl-color-theme-secondary1);
+  padding: var(--dl-space-space-halfunit);
+  transition: 0.3s;
+  font-family: Noto Sans;
+  border-radius: var(--dl-radius-radius-buttonradius);
+}
+.thq-button-icon:hover {
+  fill: var(--dl-color-theme-secondary2);
+}
+.thq-icon-medium {
+  width: var(--dl-size-size-small);
+  height: var(--dl-size-size-small);
+}
+.thq-icon-x-small {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+}
+.thq-link {
+  cursor: pointer;
+  transition: 0.3s;
   font-weight: 600;
+}
+.thq-link:hover {
+  opacity: 0.8;
+}
+.thq-input::placeholder {
   text-align: center;
-  font-family: Poppins, sans-serif;
-  line-height: 17px;
-  text-decoration: none;
+  vertical-align: middle;
 }
-
-.home-page-rectangle18 {
-  top: 409.33856201171875px;
-  left: 79px;
-  width: 477px;
-  height: 221px;
-  position: absolute;
-}
-
-.home-page-text08 {
-  top: 425px;
-  left: 129px;
-  color: rgba(0, 0, 0, 1);
-  width: 417px;
-  height: auto;
-  position: absolute;
+.Content {
   font-size: 16px;
-  font-family: Poppins, sans-serif;
-  line-height: 30px;
+  font-family: Noto Sans;
+  font-weight: 400;
+  line-height: 1.15;
+  text-transform: none;
   text-decoration: none;
 }
-
-.home-page-rectangle27 {
-  top: 132px;
-  left: 582px;
-  width: 644px;
-  height: 701px;
-  position: absolute;
-  border-radius: 15px 15px 0 0;
+@media(max-width: 991px) {
+  .thq-flex-row {
+    flex-direction: column;
+  }
+  .thq-grid-4 {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
-
-.home-page-text10 {
-  top: 213px;
-  left: 215px;
-  color: rgba(0, 117, 255, 0.75);
-  width: 249px;
-  height: auto;
-  position: absolute;
-  font-size: 28px;
-  font-family: Poppins, sans-serif;
-  line-height: 35px;
-  text-align: center;
-  text-decoration: none;
+@media(max-width: 767px) {
+  .thq-section-padding {
+    padding: var(--dl-space-space-threeunits);
+  }
+  .thq-flex-column {
+    gap: var(--dl-space-space-oneandhalfunits);
+  }
+  .thq-flex-row {
+    gap: var(--dl-space-space-oneandhalfunits);
+  }
+  .thq-grid-6 {
+    grid-gap: var(--dl-space-space-oneandhalfunits);
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .thq-grid-5 {
+    grid-gap: var(--dl-space-space-oneandhalfunits);
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .thq-card {
+    padding: var(--dl-space-space-oneandhalfunits);
+  }
+  .thq-grid-3 {
+    grid-gap: var(--dl-space-space-oneandhalfunits);
+    grid-template-columns: 1fr 1fr;
+  }
+  .thq-grid-4 {
+    grid-gap: var(--dl-space-space-oneandhalfunits);
+    flex-direction: row;
+    grid-template-columns: 1fr 1fr;
+  }
+  .thq-grid-2 {
+    grid-gap: var(--dl-space-space-oneandhalfunits);
+    grid-template-columns: 1fr;
+  }
+}
+@media(max-width: 479px) {
+  .thq-section-padding {
+    padding: var(--dl-space-space-oneandhalfunits);
+  }
+  .thq-flex-column {
+    gap: var(--dl-space-space-unit);
+  }
+  .thq-flex-row {
+    gap: var(--dl-space-space-unit);
+  }
+  .thq-grid-6 {
+    grid-gap: var(--dl-space-space-unit);
+    grid-template-columns: 1fr 1fr;
+  }
+  .thq-grid-5 {
+    grid-gap: var(--dl-space-space-unit);
+    grid-template-columns: 1fr 1fr;
+  }
+  .thq-grid-3 {
+    grid-gap: var(--dl-space-space-unit);
+    align-items: center;
+    grid-template-columns: 1fr;
+  }
+  .thq-grid-4 {
+    grid-gap: var(--dl-space-space-unit);
+    align-items: center;
+    flex-direction: column;
+    grid-template-columns: 1fr;
+  }
+  .thq-grid-2 {
+    grid-gap: var(--dl-space-space-unit);
+  }
+  
 }
