--- a/palletsplus/src/app/product/[id]/ProductDetail.module.css
+++ b/palletsplus/src/app/product/[id]/ProductDetail.module.css
@@ -39,7 +39,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 103.2%;
+    width: 101.7%;
     max-width: 1200px;
     padding: 1rem 2rem;
     border-radius: 10px;
@@ -72,7 +72,7 @@
     color: #0073fb;
     margin-bottom: -1%;
     margin-top:-3.8%;
-    width: 109.5%;
+    width: 107.7%;
     background-color: #fff;
     padding: 20px 0;
     /* border-radius: 0px 0px 0 0; */
@@ -83,7 +83,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    width: 101.7%;
+    width: 100.2%;
     max-width: 1200px;
     gap: 40px;
     background-color: #fff;
@@ -262,3 +262,23 @@
 .shareButton:hover {
     background-color: #0056b3;
 }
+/* Add this to your CSS file */
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
+  
